# aPriori

./: DNS.py  README.md  pyproject.toml
data/: README.md
data/Lifted_H2_subdomain/: info_filenames.json
docs/: CNAME  README.md  SUMMARY.md  index.html
docs/api-guide/: field3d-class.md  mesh3d-class.md  scalar3d-class.md
docs/fundamentals-and-usage/apriori-fundamentals/: README.md  data-formatting.md  plot-utilities.md  using-field3d-class.md  using-mesh3d-class.md  using-scalar3d-class.md
docs/fundamentals-and-usage/tutorial/: data-driven-closure-for-turbulence-chemistry-interaction.md
docs/getting-started/: installation.md  quickstart.md  what-is-apriori.md
src/aPriori/: DNS.py
tutorials/: README.md
