[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aPriori"
version = "0.0.2"
authors = [
  { name="Lorenzo Piu", email="lorenzo.piu@ulb.be" },
]
description = "A package to process DNS of combustion"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"